--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button class="addOption">Add</button>
     </div>
     <div class="resultSection"> </div>
-    <button>Go!</button>
+    <button class="submit">Go!</button>
       <p>Enjoy</p>
       <div>
       <img src="https://www.we-heart.com/upload-images/guidedbycerealmagazine5.jpg" width="700" height="500">
@@ -35,6 +35,19 @@
             }
 
             $('.addOption').click(add_option)
+
+            var options = []
+            var submit = function() {
+              $('.inputSection').hide()
+              $('.resultSection').css('display', 'flex')
+              $('input').each(function() {
+                options.push($(this).val())
+              })
+              var winner = options[Math.floor(Math.random() * options.length)]
+              console.log(winner)
+              $('.resultSection').text(winner)
+            }
+            $(".submit").click(submit)
         })
       </script>
   </body>
